// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "display": "none",
              "marginBottom": 15,
            }
          }
        >
          <input
            id="root_my-field"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-null"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  />
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-number"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="email"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="url"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-undefined"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "display": undefined,
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-42"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-43"
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-44"
            disabled={false}
            id="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <button
      className="btn btn-info"
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;
